WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153442
WK1: Handle soft spaces after accepted candidates
https://bugs.webkit.org/show_bug.cgi?id=153442
Summary
WK1: Handle soft spaces after accepted candidates
Beth Dakin
Reported
2016-01-25 13:29:24 PST
This is the WK1 equivalent of
https://bugs.webkit.org/show_bug.cgi?id=153331
Attachments
Patch
(5.40 KB, patch)
2016-01-25 13:32 PST
,
Beth Dakin
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2016-01-25 13:32:21 PST
Created
attachment 269785
[details]
Patch
WebKit Commit Bot
Comment 2
2016-01-25 13:33:21 PST
Attachment 269785
[details]
did not pass style-queue: ERROR: Source/WebKit/mac/WebView/WebHTMLView.mm:7098: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Beth Dakin
Comment 3
2016-01-25 13:38:40 PST
Thanks Tim!
http://trac.webkit.org/changeset/195552
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug